	  module OIDs are not emitted. Standard OID and RELATIVE-OID values will
	  always be emitted (when present in the modules).
	* Added proper dependency checking so that when elements.
	* Various tests that are executed during make check have been cleaned up.
	* Improved BOOLEAN.c so that er.encoded is initialized.
	* Cleaned up more code in the skeletons.

0.9.24: 2010-Dec-04

	* There is now a general framework for outputting ASN.1 values
	  into C.
	* OBJECT IDENTIFIER and RELATIVE-OID values are now compiled.
	  Within the values, references (symbols) of other OBJECT
	  IDENTIFIERs and RELATIVE-OIDs can be used within the same
	  module or imported with the IMPORTS statement.
	* OBJECT IDENTIFIER and RELATIVE-OID values are output in
	  BER encoding. The algorithm handles infinite length OID data,
	  subject to memory constraints. (I.e., it can handle 128-bit
	  UUIDs and much, much longer.)
	* When values are output, they are output to "ModuleName.h"
	  and "ModuleName.c".
	* General utility functions for OBJECT IDENTIFIER and
	  RELATIVE-OID manipulation are provided in the skeletons.
	  These functions can be used to construct new OIDs from dot notation
	  and compare arbitrary combinations of OBJECT IDENTIFIERs and
	  RELATIVE-OIDs using -cmp-style comparisons (<, ==, >) or straight
	  equal/not equal comparisons.

0.9.23:	2010-Oct-24

	* GeneralizedTime fix for working with time offsets which are not
	  representable in whole hours. (Severity: low; Security impact: low)
	  Thanks to IP Fabrics, Inc.
	* Added -fincludes-quoted to asn1c to generate #includes in "double"
	  instead of <angle> quotes.
	* PER encoding correctness fix. (Severity: high; Security impact: low)
	  Reported by Grzegorz Aksamit.
	* ENUMERATED extension values check relaxed. Reported by Gabriel Burca.

0.9.22:	2008-Nov-19

	* Added -pdu=all and -pdu=<type> switches to asn1c.
	* Added PER support for most known-multiplier string types: