@@ -94,6 +94,13 @@ together with
 .B \-fno-include-deps
 to prevent circular references.
 .TP
+.B \-fincludes-quoted
+Generate #include directives using "double" instead of <angle> quotes.
+Only 'system'
+#include directives are affected (such as asn_application.h).
+#include directives for external dependencies are not affected; they are always
+emitted in double quotes.
+.TP
 .BI "\-fknown-extern-type="<name>
 Pretend the specified type is known. The compiler will assume the target
 language source files for the given type have been provided manually.
@@ -145,3 +152,5 @@ Generate "-- #line" comments in \fB-E\fR output.
 \&\fIunber\fR\|(1), \&\fIenber\fR\|(1)
 .SH AUTHORS
 Lev Walkin <vlm@lionet.info>
+.PP
+Sean Leonard of SeanTek(R) <dev+asn1c@seantek.com>
