@@ -17,6 +17,7 @@ int asn1c_lang_C_type_REAL(arg_t *);
 int asn1c_lang_C_type_SIMPLE_TYPE(arg_t *);
 
 int asn1c_lang_C_value_REFERENCE(arg_t *);
+int asn1c_lang_C_value_INTEGER(arg_t *);
 int asn1c_lang_C_value_OBJECT_IDENTIFIER(arg_t *);
 int asn1c_lang_C_value_RELATIVE_OID(arg_t *);
 
@@ -75,6 +76,7 @@ static asn1_language_map_t asn1_lang_C[] __attribute__ ((unused)) = {
 	 * Values
 	 */
 	{ AMT_VALUE, A1TC_REFERENCE, asn1c_lang_C_value_REFERENCE },
+	{ AMT_VALUE, ASN_BASIC_INTEGER, asn1c_lang_C_value_INTEGER },
 	{ AMT_VALUE, ASN_BASIC_OBJECT_IDENTIFIER, asn1c_lang_C_value_OBJECT_IDENTIFIER },
 	{ AMT_VALUE, ASN_BASIC_RELATIVE_OID, asn1c_lang_C_value_RELATIVE_OID },
 	{ 0, 0, 0 }
